@@ -19,6 +19,8 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
+import org.apache.commons.lang.builder.EqualsBuilder;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.openmrs.util.OpenmrsConstants;
@@ -27,6 +29,8 @@ import org.simpleframework.xml.Attribute;
 import org.simpleframework.xml.Element;
 import org.simpleframework.xml.Root;
 import org.springframework.util.StringUtils;
+
+import static org.apache.commons.lang.StringUtils.defaultString;
 
 /**
  * A Person can have zero to n PersonName(s).
@@ -62,6 +66,8 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	private String degree;
 	
+	private static String format = OpenmrsConstants.PERSON_NAME_FORMAT_SHORT;
+	
 	// Constructors
 	
 	/** default constructor */
@@ -75,7 +81,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * Convenience constructor with the basic requirements
-	 * 
+	 *
 	 * @param givenName String this person's first name
 	 * @param middleName String this person's middle name
 	 * @param familyName String this person's last name
@@ -91,88 +97,78 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 * {@link #equals(Object)} in that this method compares the inner fields of each name for
 	 * equality. Note: Null/empty fields on <code>otherName</code> /will not/ cause a false value to
 	 * be returned
-	 * 
+	 *
 	 * @param otherName PersonName with which to compare
 	 * @return boolean true/false whether or not they are the same names
 	 * @should return true if given middle and family name are equal
 	 */
 	@SuppressWarnings("unchecked")
 	public boolean equalsContent(PersonName otherName) {
-		boolean returnValue = true;
-		
-		// these are the methods to compare. All are expected to be Strings
-		String[] methods = { "getGivenName", "getMiddleName", "getFamilyName" };
-		
-		Class nameClass = this.getClass();
-		
-		// loop over all of the selected methods and compare this and other
-		for (String methodName : methods) {
-			try {
-				Method method = nameClass.getMethod(methodName, new Class[] {});
-				
-				String thisValue = (String) method.invoke(this);
-				String otherValue = (String) method.invoke(otherName);
-				
-				if (otherValue != null && otherValue.length() > 0)
-					returnValue &= otherValue.equals(thisValue);
-				
-			}
-			catch (NoSuchMethodException e) {
-				log.warn("No such method for comparison " + methodName, e);
-			}
-			catch (IllegalAccessException e) {
-				log.error("Error while comparing names", e);
-			}
-			catch (InvocationTargetException e) {
-				log.error("Error while comparing names", e);
-			}
-			
-		}
-		
-		return returnValue;
+		return new EqualsBuilder().append(defaultString(otherName.getPrefix()), defaultString(prefix)).append(
+		    defaultString(otherName.getGivenName()), defaultString(givenName)).append(
+		    defaultString(otherName.getMiddleName()), defaultString(middleName)).append(
+		    defaultString(otherName.getFamilyNamePrefix()), defaultString(familyNamePrefix)).append(
+		    defaultString(otherName.getDegree()), defaultString(degree)).append(defaultString(otherName.getFamilyName()),
+		    defaultString(familyName)).append(defaultString(otherName.getFamilyName2()), defaultString(familyName2)).append(
+		    defaultString(otherName.getFamilyNameSuffix()), defaultString(familyNameSuffix)).isEquals();
 	}
 	
 	/**
 	 * bitwise copy of the personName object. NOTICE: THIS WILL NOT COPY THE PATIENT OBJECT. The
 	 * PersonName.person object in this object AND the cloned object will point at the same person
-	 * 
+	 *
 	 * @return New PersonName object
 	 * @should copy every property of given personName
 	 */
 	public static PersonName newInstance(PersonName pn) {
-		if (pn == null)
+		if (pn == null) {
 			throw new IllegalArgumentException();
-		PersonName newName = new PersonName(new Integer(pn.getPersonNameId()));
-		if (pn.getGivenName() != null)
+		}
+		PersonName newName = new PersonName(Integer.valueOf(pn.getPersonNameId()));
+		if (pn.getGivenName() != null) {
 			newName.setGivenName(new String(pn.getGivenName()));
-		if (pn.getMiddleName() != null)
+		}
+		if (pn.getMiddleName() != null) {
 			newName.setMiddleName(new String(pn.getMiddleName()));
-		if (pn.getFamilyName() != null)
+		}
+		if (pn.getFamilyName() != null) {
 			newName.setFamilyName(new String(pn.getFamilyName()));
-		if (pn.getFamilyName2() != null)
+		}
+		if (pn.getFamilyName2() != null) {
 			newName.setFamilyName2(new String(pn.getFamilyName2()));
-		if (pn.getFamilyNamePrefix() != null)
+		}
+		if (pn.getFamilyNamePrefix() != null) {
 			newName.setFamilyNamePrefix(new String(pn.getFamilyNamePrefix()));
-		if (pn.getFamilyNameSuffix() != null)
+		}
+		if (pn.getFamilyNameSuffix() != null) {
 			newName.setFamilyNameSuffix(new String(pn.getFamilyNameSuffix()));
-		if (pn.getPrefix() != null)
+		}
+		if (pn.getPrefix() != null) {
 			newName.setPrefix(new String(pn.getPrefix()));
-		if (pn.getDegree() != null)
+		}
+		if (pn.getDegree() != null) {
 			newName.setDegree(new String(pn.getDegree()));
-		if (pn.getVoidReason() != null)
+		}
+		if (pn.getVoidReason() != null) {
 			newName.setVoidReason(new String(pn.getVoidReason()));
+		}
 		
-		if (pn.getDateChanged() != null)
+		if (pn.getDateChanged() != null) {
 			newName.setDateChanged((Date) pn.getDateChanged().clone());
-		if (pn.getDateCreated() != null)
+		}
+		if (pn.getDateCreated() != null) {
 			newName.setDateCreated((Date) pn.getDateCreated().clone());
-		if (pn.getDateVoided() != null)
+		}
+		if (pn.getDateVoided() != null) {
 			newName.setDateVoided((Date) pn.getDateVoided().clone());
+		}
 		
-		if (pn.getPreferred() != null)
+		if (pn.getPreferred() != null) {
 			newName.setPreferred(pn.getPreferred().booleanValue());
-		if (pn.getVoided() != null)
+		}
+		if (pn.getVoided() != null) {
 			newName.setVoided(pn.getVoided().booleanValue());
+		}
 		
 		newName.setPerson(pn.getPerson());
 		newName.setVoidedBy(pn.getVoidedBy());
@@ -184,7 +180,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @return Returns the dateVoided.
 	 */
 	@Element(required = false)
@@ -222,8 +218,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getFamilyName() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return OpenmrsConstants.OBSCURE_PATIENTS_FAMILY_NAME;
+		}
 		return familyName;
 	}
 	
@@ -241,8 +238,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getFamilyName2() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return null;
+		}
 		return familyName2;
 	}
 	
@@ -260,8 +258,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getFamilyNamePrefix() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return null;
+		}
 		return familyNamePrefix;
 	}
 	
@@ -279,8 +278,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getFamilyNameSuffix() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return null;
+		}
 		return familyNameSuffix;
 	}
 	
@@ -298,8 +298,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getGivenName() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return OpenmrsConstants.OBSCURE_PATIENTS_GIVEN_NAME;
+		}
 		return givenName;
 	}
 	
@@ -317,8 +318,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getMiddleName() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return OpenmrsConstants.OBSCURE_PATIENTS_MIDDLE_NAME;
+		}
 		return middleName;
 	}
 	
@@ -366,8 +368,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 * @return Returns the preferred.
 	 */
 	public Boolean isPreferred() {
-		if (preferred == null)
+		if (preferred == null) {
 			return Boolean.FALSE;
+		}
 		return preferred;
 	}
 	
@@ -390,8 +393,9 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	@Element(data = true, required = false)
 	public String getPrefix() {
-		if (OpenmrsConstants.OBSCURE_PATIENTS)
+		if (OpenmrsConstants.OBSCURE_PATIENTS) {
 			return null;
+		}
 		return prefix;
 	}
 	
@@ -413,7 +417,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @param voided The voided to set.
 	 */
 	@Attribute(required = true)
@@ -423,7 +427,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @return Returns the voidedBy.
 	 */
 	@Element(required = false)
@@ -433,7 +437,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @param voidedBy The voidedBy to set.
 	 */
 	@Element(required = false)
@@ -443,7 +447,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @return Returns the voidReason.
 	 */
 	@Element(data = true, required = false)
@@ -453,7 +457,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	
 	/**
 	 * This still exists on PersonName for the SimpleFramework annotation
-	 * 
+	 *
 	 * @param voidReason The voidReason to set.
 	 */
 	@Element(data = true, required = false)
@@ -465,28 +469,51 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 * Convenience method to get all the names of this PersonName and concatonating them together
 	 * with spaces in between. If any part of {@link #getPrefix()}, {@link #getGivenName()},
 	 * {@link #getMiddleName()}, etc are null, they are not included in the returned name
-	 * 
+	 *
 	 * @return all of the parts of this {@link PersonName} joined with spaces
 	 * @should not put spaces around an empty middle name
 	 */
 	public String getFullName() {
 		List<String> temp = new ArrayList<String>();
-		if (StringUtils.hasText(getPrefix()))
-			temp.add(getPrefix());
-		if (StringUtils.hasText(getGivenName()))
-			temp.add(getGivenName());
-		if (StringUtils.hasText(getMiddleName()))
-			temp.add(getMiddleName());
-		if (StringUtils.hasText(getFamilyNamePrefix()))
-			temp.add(getFamilyNamePrefix());
-		if (StringUtils.hasText(getFamilyName()))
-			temp.add(getFamilyName());
-		if (StringUtils.hasText(getFamilyName2()))
-			temp.add(getFamilyName2());
-		if (StringUtils.hasText(getFamilyNameSuffix()))
-			temp.add(getFamilyNameSuffix());
-		if (StringUtils.hasText(getDegree()))
-			temp.add(getDegree());
+		if ((PersonName.format).equals(OpenmrsConstants.PERSON_NAME_FORMAT_LONG)) {
+			if (StringUtils.hasText(getPrefix())) {
+				temp.add(getPrefix());
+			}
+			if (StringUtils.hasText(getGivenName())) {
+				temp.add(getGivenName());
+			}
+			if (StringUtils.hasText(getMiddleName())) {
+				temp.add(getMiddleName());
+			}
+			if (StringUtils.hasText(getFamilyNamePrefix())) {
+				temp.add(getFamilyNamePrefix());
+			}
+			if (StringUtils.hasText(getFamilyName())) {
+				temp.add(getFamilyName());
+			}
+			if (StringUtils.hasText(getFamilyName2())) {
+				temp.add(getFamilyName2());
+			}
+			if (StringUtils.hasText(getFamilyNameSuffix())) {
+				temp.add(getFamilyNameSuffix());
+			}
+			if (StringUtils.hasText(getDegree())) {
+				temp.add(getDegree());
+			}
+		} else {
+			if (StringUtils.hasText(getPrefix())) {
+				temp.add(getPrefix());
+			}
+			if (StringUtils.hasText(getGivenName())) {
+				temp.add(getGivenName());
+			}
+			if (StringUtils.hasText(getMiddleName())) {
+				temp.add(getMiddleName());
+			}
+			if (StringUtils.hasText(getFamilyName())) {
+				temp.add(getFamilyName());
+			}
+		}
 		
 		String nameString = StringUtils.collectionToDelimitedString(temp, " ");
 		
@@ -506,7 +533,7 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 * TODO: the behavior of this method needs to be controlled by some sort of global property
 	 * because an implementation can define how they want their names to look (which fields to
 	 * show/hide)
-	 * 
+	 *
 	 * @see java.lang.Comparable#compareTo(java.lang.Object)
 	 * @should return negative if other name is voided
 	 * @should return negative if this name is preferred
@@ -520,28 +547,37 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	 */
 	public int compareTo(PersonName other) {
 		int ret = isVoided().compareTo(other.isVoided());
-		if (ret == 0)
+		if (ret == 0) {
 			ret = other.isPreferred().compareTo(isPreferred());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getFamilyName(), other.getFamilyName());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getFamilyName2(), other.getFamilyName2());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getGivenName(), other.getGivenName());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getMiddleName(), other.getMiddleName());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getFamilyNamePrefix(), other.getFamilyNamePrefix());
-		if (ret == 0)
+		}
+		if (ret == 0) {
 			ret = OpenmrsUtil.compareWithNullAsGreatest(getFamilyNameSuffix(), other.getFamilyNameSuffix());
-		if (ret == 0 && getDateCreated() != null)
+		}
+		if (ret == 0 && getDateCreated() != null) {
 			ret = OpenmrsUtil.compareWithNullAsLatest(getDateCreated(), other.getDateCreated());
+		}
 		
 		// if we've gotten this far, just check all name values. If they are
 		// equal, leave the objects at 0. If not, arbitrarily pick retValue=1
 		// and return that (they are not equal).
-		if (ret == 0 && !equalsContent(other))
+		if (ret == 0 && !equalsContent(other)) {
 			ret = 1;
+		}
 		
 		return ret;
 	}
@@ -561,5 +597,16 @@ public class PersonName extends BaseOpenmrsData implements java.io.Serializable,
 	public void setId(Integer id) {
 		setPersonNameId(id);
 		
+	}
+	
+	public static void setFormat(String format) {
+		if (StringUtils.isEmpty(format))
+			PersonName.format = OpenmrsConstants.PERSON_NAME_FORMAT_SHORT;
+		else
+			PersonName.format = format;
+	}
+	
+	public static String getFormat() {
+		return PersonName.format;
 	}
 }
